LCMS parser fixed R and other details